test/should-fail/vsgc1169.f3
/**
 * Regress test for VSGC-1169 - Compiler crashes on a Bind to a f3 class instance creation with disallowed constructor args
 *
 * @test/compile-error
 */

class InvalidConstArgTest{
var x:Integer;
var y:Integer;
}
var x =bind new InvalidConstArgTest(1); // Invalid call
